--- a/css/style.css
+++ b/css/style.css
@@ -3767,6 +3767,7 @@ body {
   line-height: 17px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
+  text-align: center;
 }
 .portfolio .tabs,
 .leadership .tabs {
@@ -3791,6 +3792,7 @@ body {
 .portfolio .tabs > li,
 .leadership .tabs > li {
   position: relative;
+  flex-grow: 1;
 }
 .portfolio .tabs > li:after,
 .leadership .tabs > li:after {
@@ -5265,19 +5267,27 @@ body {
 }
 
 .tabbed-content-wrapper {
-  background: #f1f1f1;
-  display: flex;
+  background: linear-gradient(90deg, #fff 0%, #fff 50%, #f1f1f1 50%, #f1f1f1 100%);
   margin-bottom: 130px;
+}
+.tabbed-content-wrapper .tabbed-content-inner {
+  max-width: 1210px;
+  margin: 0 auto;
+  display: flex;
 }
 .tabbed-content-wrapper .tabbed-sections-wrapper {
   background: #fff;
   display: flex;
+  width: 23%;
   justify-content: flex-end;
 }
 .tabbed-content-wrapper .tabbed-sections-wrapper .tabbed-sections {
   max-width: 290px;
   position: relative;
   padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .tabbed-content-wrapper .tabbed-sections-wrapper .tabbed-sections:after {
   background: #E0E0E0;
@@ -5317,6 +5327,8 @@ body {
 }
 .tabbed-content-wrapper .tabbed-content-list-wrapper {
   display: flex;
+  background: #f1f1f1;
+  width: 77%;
 }
 .tabbed-content-wrapper .tabbed-content-list-wrapper .tabbed-content-list {
   padding: 40px 15px 40px 80px;
@@ -5361,16 +5373,6 @@ body {
   line-height: 24px;
 }
 
-@media screen and (min-width: 1211px) {
-  .tabbed-content-wrapper .tabbed-sections-wrapper {
-    width: 50%;
-    margin-left: -315px;
-  }
-  .tabbed-content-wrapper .tabbed-content-list-wrapper {
-    display: flex;
-    width: 50%;
-  }
-}
 @media screen and (max-width: 1023px) {
   .quote-wrapper {
     padding: 30px 0 55px;
@@ -5392,11 +5394,16 @@ body {
     display: block;
     margin: 0 auto 65px;
   }
+  .tabbed-content-wrapper .tabbed-sections-wrapper {
+    display: none;
+  }
   .tabbed-content-wrapper .tabbed-sections-wrapper .tabbed-sections {
     display: none;
   }
   .tabbed-content-wrapper .tabbed-content-list-wrapper {
     display: block;
+    width: 100%;
+    background: #fff;
   }
   .tabbed-content-wrapper .tabbed-content-list-wrapper .tabbed-content-list {
     padding: 0 15px;
@@ -5568,6 +5575,10 @@ body {
 }
 .insights-list-wrapper .insights-list-content .tabs > li {
   position: relative;
+  flex-grow: 1;
+}
+.insights-list-wrapper .insights-list-content .tabs > li h5 {
+  text-align: center;
 }
 .insights-list-wrapper .insights-list-content .tabs > li:after {
   background: #388067;
@@ -7027,6 +7038,7 @@ body {
 }
 .pillars .tabs > li {
   position: relative;
+  flex-grow: 1;
 }
 .pillars .tabs > li:after {
   background: #388067;
@@ -7052,6 +7064,7 @@ body {
   line-height: 17px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
+  text-align: center;
 }
 .pillars .tabs-content {
   padding: 0;
@@ -7146,6 +7159,7 @@ body {
 }
 .opportunities .tabs > li {
   position: relative;
+  flex-grow: 1;
 }
 .opportunities .tabs > li:after {
   background: #388067;
@@ -7170,6 +7184,7 @@ body {
   font-size: 14.5px;
   line-height: 17px;
   letter-spacing: 0.2em;
+  text-align: center;
   text-transform: uppercase;
 }
 .opportunities .tabs-content {
