--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -3593,6 +3593,10 @@ body {
 			font-style: italic;
 		}
 	}
+
+	.play-video {
+		cursor: pointer;
+	}
 }
 
 .tabbed-content-wrapper {
@@ -4734,9 +4738,9 @@ body {
 	z-index: 999;
 }
 
-[data-page=insights] .ui-widget-overlay {
-	background: rgb(12, 47, 75);
-	opacity: 0.7;
+.ui-widget-overlay {
+	background: rgb(12, 47, 75) !important;
+	opacity: 0.7 !important;
 }
 
 @media screen and (max-width: 1023px) {
@@ -6950,6 +6954,43 @@ body .ui-tooltip.ui-widget-content {
 		.memos-list {
 			margin-right: -13px;
 			padding-right: 13px !important;
+		}
+	}
+}
+
+.ui-widget.ui-dialog.video-player-dialog {
+	max-width: 943px;
+
+	.ui-dialog-titlebar {
+		.ui-dialog-titlebar-close {
+			@extend .svg-video-close-dims;
+			top: -50px;
+			left: 50%;
+			right: auto;
+
+			margin: -14px 0 0 -25px;
+		}
+
+		.ui-icon {
+			top: 0;
+			left: 0;
+			margin: 0;
+		}
+
+		.ui-icon-closethick {
+			@extend .svg-video-close;
+			@extend .svg-video-close-dims;
+		}
+	}
+
+	.video-player {
+		padding: 0;
+
+		video {
+			border-radius: 3px;
+
+			max-width: 943px;
+			width: 100%;
 		}
 	}
 }
