--- a/sass/sprite.scss
+++ b/sass/sprite.scss
@@ -1,10 +1,10 @@
 %svg-common {
-	background: url("svg/sprite.css-d0029727.svg") no-repeat;
+	background: url("svg/sprite.css-9cb54b4e.svg") no-repeat;
 }
 
 .svg-archived-memo {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 32%;
+	background-position: 92.73927392739274% 32.37410071942446%;
 }
 
 .svg-archived-memo-dims {
@@ -14,7 +14,7 @@
 
 .svg-arrow-down {
 	@extend %svg-common;
-	background-position: 63.541666666666664% 97.17314487632508%;
+	background-position: 98.71382636655949% 25.174825174825173%;
 }
 
 .svg-arrow-down-dims {
@@ -24,7 +24,7 @@
 
 .svg-arrow-down-blue {
 	@extend %svg-common;
-	background-position: 52.0979020979021% 97.86476868327402%;
+	background-position: 99.35275080906149% 13.380281690140846%;
 }
 
 .svg-arrow-down-blue-dims {
@@ -34,7 +34,7 @@
 
 .svg-arrow-down-green {
 	@extend %svg-common;
-	background-position: 45.80419580419581% 97.86476868327402%;
+	background-position: 99.35275080906149% 7.042253521126761%;
 }
 
 .svg-arrow-down-green-dims {
@@ -44,7 +44,7 @@
 
 .svg-arrow-left-black {
 	@extend %svg-common;
-	background-position: 0 0;
+	background-position: 17.921146953405017% 0;
 }
 
 .svg-arrow-left-black-dims {
@@ -54,7 +54,7 @@
 
 .svg-arrow-left-green {
 	@extend %svg-common;
-	background-position: 18.75% 0;
+	background-position: 0 19.68503937007874%;
 }
 
 .svg-arrow-left-green-dims {
@@ -64,7 +64,7 @@
 
 .svg-arrow-left-white {
 	@extend %svg-common;
-	background-position: 0 19.12350597609562%;
+	background-position: 17.204301075268816% 19.68503937007874%;
 }
 
 .svg-arrow-left-white-dims {
@@ -74,7 +74,7 @@
 
 .svg-arrow-right-black {
 	@extend %svg-common;
-	background-position: 18.75% 19.12350597609562%;
+	background-position: 35.12544802867384% 0;
 }
 
 .svg-arrow-right-black-dims {
@@ -84,7 +84,7 @@
 
 .svg-arrow-right-green {
 	@extend %svg-common;
-	background-position: 37.5% 0;
+	background-position: 35.12544802867384% 18.89763779527559%;
 }
 
 .svg-arrow-right-green-dims {
@@ -94,7 +94,7 @@
 
 .svg-arrow-right-white {
 	@extend %svg-common;
-	background-position: 37.5% 19.12350597609562%;
+	background-position: 0 38.58267716535433%;
 }
 
 .svg-arrow-right-white-dims {
@@ -104,7 +104,7 @@
 
 .svg-arrow-up {
 	@extend %svg-common;
-	background-position: 57.986111111111114% 97.17314487632508%;
+	background-position: 98.71382636655949% 19.58041958041958%;
 }
 
 .svg-arrow-up-dims {
@@ -114,7 +114,7 @@
 
 .svg-burger {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 93.04635761589404% 9.090909090909092%;
 }
 
 .svg-burger-dims {
@@ -124,7 +124,7 @@
 
 .svg-checkbox {
 	@extend %svg-common;
-	background-position: 32.04225352112676% 98.5663082437276%;
+	background-position: 38.43648208469055% 98.58156028368795%;
 }
 
 .svg-checkbox-dims {
@@ -134,7 +134,7 @@
 
 .svg-checkbox-checked {
 	@extend %svg-common;
-	background-position: 25% 98.5663082437276%;
+	background-position: 91.53094462540717% 91.48936170212765%;
 }
 
 .svg-checkbox-checked-dims {
@@ -144,7 +144,7 @@
 
 .svg-chevron {
 	@extend %svg-common;
-	background-position: 8.571428571428571% 100%;
+	background-position: 15.841584158415841% 100%;
 }
 
 .svg-chevron-dims {
@@ -154,7 +154,7 @@
 
 .svg-chevron-green {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 75.63636363636364%;
+	background-position: 92.73927392739274% 84.1726618705036%;
 }
 
 .svg-chevron-green-dims {
@@ -164,7 +164,7 @@
 
 .svg-close {
 	@extend %svg-common;
-	background-position: 63.503649635036496% 88.10408921933086%;
+	background-position: 71.38047138047138% 88.23529411764706%;
 }
 
 .svg-close-dims {
@@ -174,7 +174,7 @@
 
 .svg-close-black {
 	@extend %svg-common;
-	background-position: 52.55474452554745% 88.10408921933086%;
+	background-position: 61.27946127946128% 88.23529411764706%;
 }
 
 .svg-close-black-dims {
@@ -184,7 +184,7 @@
 
 .svg-close-blue {
 	@extend %svg-common;
-	background-position: 41.605839416058394% 88.10408921933086%;
+	background-position: 51.178451178451176% 88.23529411764706%;
 }
 
 .svg-close-blue-dims {
@@ -194,7 +194,7 @@
 
 .svg-download {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 14.545454545454545%;
+	background-position: 92.73927392739274% 49.64028776978417%;
 }
 
 .svg-download-dims {
@@ -204,7 +204,7 @@
 
 .svg-ellipse {
 	@extend %svg-common;
-	background-position: 76.84563758389261% 64.84641638225256%;
+	background-position: 95.6386292834891% 29.72972972972973%;
 }
 
 .svg-ellipse-dims {
@@ -214,7 +214,7 @@
 
 .svg-ellipse-empty {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 49.45454545454545%;
+	background-position: 7.920792079207921% 100%;
 }
 
 .svg-ellipse-empty-dims {
@@ -224,7 +224,7 @@
 
 .svg-ellipse-selected {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 40.72727272727273%;
+	background-position: 92.73927392739274% 41.007194244604314%;
 }
 
 .svg-ellipse-selected-dims {
@@ -234,7 +234,7 @@
 
 .svg-facebook {
 	@extend %svg-common;
-	background-position: 36.57587548638132% 75.39682539682539%;
+	background-position: 33.57142857142857% 75.68627450980392%;
 }
 
 .svg-facebook-dims {
@@ -244,7 +244,7 @@
 
 .svg-facebook-green-fill {
 	@extend %svg-common;
-	background-position: 74.31906614785993% 18.650793650793652%;
+	background-position: 50.357142857142854% 75.68627450980392%;
 }
 
 .svg-facebook-green-fill-dims {
@@ -254,7 +254,7 @@
 
 .svg-facebook-green-outline {
 	@extend %svg-common;
-	background-position: 74.31906614785993% 0;
+	background-position: 68.92857142857143% 36.86274509803921%;
 }
 
 .svg-facebook-green-outline-dims {
@@ -264,7 +264,7 @@
 
 .svg-facebook-white {
 	@extend %svg-common;
-	background-position: 56.03112840466926% 37.301587301587304%;
+	background-position: 68.92857142857143% 18.431372549019606%;
 }
 
 .svg-facebook-white-dims {
@@ -274,7 +274,7 @@
 
 .svg-folder {
 	@extend %svg-common;
-	background-position: 98.2394366197183% 91.1032028469751%;
+	background-position: 44.95114006514658% 97.88732394366197%;
 }
 
 .svg-folder-dims {
@@ -284,7 +284,7 @@
 
 .svg-info {
 	@extend %svg-common;
-	background-position: 39.08450704225352% 98.5663082437276%;
+	background-position: 100% 0;
 }
 
 .svg-info-dims {
@@ -294,7 +294,7 @@
 
 .svg-insights-article {
 	@extend %svg-common;
-	background-position: 89.47368421052632% 61.68582375478927%;
+	background-position: 83.04498269896193% 62.121212121212125%;
 }
 
 .svg-insights-article-dims {
@@ -304,7 +304,7 @@
 
 .svg-insights-article-hover {
 	@extend %svg-common;
-	background-position: 89.47368421052632% 76.24521072796935%;
+	background-position: 83.04498269896193% 76.51515151515152%;
 }
 
 .svg-insights-article-hover-dims {
@@ -314,7 +314,7 @@
 
 .svg-insights-audio {
 	@extend %svg-common;
-	background-position: 89.47368421052632% 47.12643678160919%;
+	background-position: 0 90.9090909090909%;
 }
 
 .svg-insights-audio-dims {
@@ -324,7 +324,7 @@
 
 .svg-insights-audio-hover {
 	@extend %svg-common;
-	background-position: 14.285714285714286% 90.80459770114942%;
+	background-position: 13.14878892733564% 90.9090909090909%;
 }
 
 .svg-insights-audio-hover-dims {
@@ -334,7 +334,7 @@
 
 .svg-insights-video {
 	@extend %svg-common;
-	background-position: 28.571428571428573% 90.80459770114942%;
+	background-position: 26.29757785467128% 90.9090909090909%;
 }
 
 .svg-insights-video-dims {
@@ -344,7 +344,7 @@
 
 .svg-insights-video-hover {
 	@extend %svg-common;
-	background-position: 0 90.80459770114942%;
+	background-position: 39.44636678200692% 90.9090909090909%;
 }
 
 .svg-insights-video-hover-dims {
@@ -354,7 +354,7 @@
 
 .svg-linkedin {
 	@extend %svg-common;
-	background-position: 54.86381322957198% 75.39682539682539%;
+	background-position: 67.14285714285714% 75.68627450980392%;
 }
 
 .svg-linkedin-dims {
@@ -364,7 +364,7 @@
 
 .svg-linkedin-green-fill {
 	@extend %svg-common;
-	background-position: 56.03112840466926% 18.650793650793652%;
+	background-position: 52.142857142857146% 36.86274509803921%;
 }
 
 .svg-linkedin-green-fill-dims {
@@ -374,7 +374,7 @@
 
 .svg-linkedin-green-outline {
 	@extend %svg-common;
-	background-position: 18.28793774319066% 75.39682539682539%;
+	background-position: 0 57.254901960784316%;
 }
 
 .svg-linkedin-green-outline-dims {
@@ -384,7 +384,7 @@
 
 .svg-linkedin-white {
 	@extend %svg-common;
-	background-position: 0 75.39682539682539%;
+	background-position: 16.785714285714285% 75.68627450980392%;
 }
 
 .svg-linkedin-white-dims {
@@ -394,7 +394,7 @@
 
 .svg-listen {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 58.18181818181818%;
+	background-position: 92.73927392739274% 58.273381294964025%;
 }
 
 .svg-listen-dims {
@@ -404,7 +404,7 @@
 
 .svg-mail-green-fill {
 	@extend %svg-common;
-	background-position: 74.31906614785993% 55.95238095238095%;
+	background-position: 0 75.68627450980392%;
 }
 
 .svg-mail-green-fill-dims {
@@ -414,7 +414,7 @@
 
 .svg-mail-green-outline {
 	@extend %svg-common;
-	background-position: 74.31906614785993% 37.301587301587304%;
+	background-position: 68.92857142857143% 55.294117647058826%;
 }
 
 .svg-mail-green-outline-dims {
@@ -424,7 +424,7 @@
 
 .svg-map-icon {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 23.272727272727273%;
+	background-position: 92.73927392739274% 23.741007194244606%;
 }
 
 .svg-map-icon-dims {
@@ -434,7 +434,7 @@
 
 .svg-search {
 	@extend %svg-common;
-	background-position: 73.38129496402878% 86.81318681318682%;
+	background-position: 80.39867109634551% 86.95652173913044%;
 }
 
 .svg-search-dims {
@@ -444,7 +444,7 @@
 
 .svg-search-blue {
 	@extend %svg-common;
-	background-position: 82.73381294964028% 86.81318681318682%;
+	background-position: 93.35548172757476% 0;
 }
 
 .svg-search-blue-dims {
@@ -454,7 +454,7 @@
 
 .svg-search-icon {
 	@extend %svg-common;
-	background-position: 71.48288973384031% 73.64341085271317%;
+	background-position: 83.91608391608392% 0;
 }
 
 .svg-search-icon-dims {
@@ -464,7 +464,7 @@
 
 .svg-search-icon-hover {
 	@extend %svg-common;
-	background-position: 90.49429657794677% 0;
+	background-position: 83.91608391608392% 15.708812260536398%;
 }
 
 .svg-search-icon-hover-dims {
@@ -474,7 +474,7 @@
 
 .svg-search-type-all {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 66.9090909090909%;
+	background-position: 92.73927392739274% 66.90647482014388%;
 }
 
 .svg-search-type-all-dims {
@@ -484,7 +484,7 @@
 
 .svg-search-type-insights {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 5.818181818181818%;
+	background-position: 92.73927392739274% 75.53956834532374%;
 }
 
 .svg-search-type-insights-dims {
@@ -494,7 +494,7 @@
 
 .svg-search-type-people {
 	@extend %svg-common;
-	background-position: 99.64285714285714% 84.36363636363636%;
+	background-position: 92.73927392739274% 15.107913669064748%;
 }
 
 .svg-search-type-people-dims {
@@ -514,7 +514,7 @@
 
 .svg-twitter {
 	@extend %svg-common;
-	background-position: 54.86381322957198% 56.74603174603175%;
+	background-position: 68.92857142857143% 0;
 }
 
 .svg-twitter-dims {
@@ -524,7 +524,7 @@
 
 .svg-twitter-green-fill {
 	@extend %svg-common;
-	background-position: 0 38.095238095238095%;
+	background-position: 50.357142857142854% 57.254901960784316%;
 }
 
 .svg-twitter-green-fill-dims {
@@ -534,7 +534,7 @@
 
 .svg-twitter-green-outline {
 	@extend %svg-common;
-	background-position: 18.28793774319066% 56.74603174603175%;
+	background-position: 17.142857142857142% 38.431372549019606%;
 }
 
 .svg-twitter-green-outline-dims {
@@ -544,7 +544,7 @@
 
 .svg-twitter-white {
 	@extend %svg-common;
-	background-position: 0 56.74603174603175%;
+	background-position: 16.785714285714285% 57.254901960784316%;
 }
 
 .svg-twitter-white-dims {
@@ -554,7 +554,7 @@
 
 .svg-user {
 	@extend %svg-common;
-	background-position: 90.49429657794677% 15.891472868217054%;
+	background-position: 83.91608391608392% 31.417624521072796%;
 }
 
 .svg-user-dims {
@@ -564,7 +564,7 @@
 
 .svg-user-hover {
 	@extend %svg-common;
-	background-position: 90.49429657794677% 31.782945736434108%;
+	background-position: 83.91608391608392% 47.12643678160919%;
 }
 
 .svg-user-hover-dims {
@@ -572,9 +572,19 @@
 	height: 41px;
 }
 
+.svg-video-close {
+	@extend %svg-common;
+	background-position: 0 0;
+}
+
+.svg-video-close-dims {
+	width: 50px;
+	height: 50px;
+}
+
 .svg-view-all-blue {
 	@extend %svg-common;
-	background-position: 91.1032028469751% 85.8695652173913%;
+	background-position: 23.68421052631579% 99.6415770609319%;
 }
 
 .svg-view-all-blue-dims {
@@ -584,7 +594,7 @@
 
 .svg-view-all-green {
 	@extend %svg-common;
-	background-position: 17.081850533807827% 99.6376811594203%;
+	background-position: 31.25% 99.6415770609319%;
 }
 
 .svg-view-all-green-dims {
@@ -594,7 +604,7 @@
 
 .svg-youtube {
 	@extend %svg-common;
-	background-position: 56.03112840466926% 0;
+	background-position: 52.142857142857146% 0;
 }
 
 .svg-youtube-dims {
@@ -604,7 +614,7 @@
 
 .svg-youtube-green-fill {
 	@extend %svg-common;
-	background-position: 36.57587548638132% 38.095238095238095%;
+	background-position: 33.92857142857143% 38.431372549019606%;
 }
 
 .svg-youtube-green-fill-dims {
@@ -614,7 +624,7 @@
 
 .svg-youtube-green-outline {
 	@extend %svg-common;
-	background-position: 36.57587548638132% 56.74603174603175%;
+	background-position: 33.57142857142857% 57.254901960784316%;
 }
 
 .svg-youtube-green-outline-dims {
@@ -624,7 +634,7 @@
 
 .svg-youtube-white {
 	@extend %svg-common;
-	background-position: 18.28793774319066% 38.095238095238095%;
+	background-position: 52.142857142857146% 18.431372549019606%;
 }
 
 .svg-youtube-white-dims {
